# scadgen

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  docker-build.sh  nose2.cfg  pyproject.toml  requirements-dev.txt  run.sh  setup.py  test-loop.sh  test.sh  test_loop.sh  ve.sh
scadgen/: __init__.py  scadobj.py  scadobj_test.py
src/scadgen/: scadobj.py  scadobj_test.py
