[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "scadgen"
version = "0.0.2"
description = "A Python library for generating OpenSCAD 3D models."
license = "MIT"
authors = [
  "TC Teo <scadgen-pypi-011ecc47@tsechin.com>",
]
readme = "README.md"
homepage = "https://github.com/tcteo/scadgen"
repository = "https://github.com/tcteo/scadgen"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
packages = [
  { include = "scadgen", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.urls]
"Homepage" = "https://github.com/tcteo/scadgen"
"Bug Tracker" = "https://github.com/tcteo/scadgen/issues"
